Generate react-rails js files

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "postinstall": "cd client && yarn install"
+  },
+
   "name": "engineering-metrics",
   "private": true,
   "dependencies": {
